add classname of js

--- a/Practice/index.html
+++ b/Practice/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <h1 class="header">Hello p414</h1>
-    <h1>Hello p135</h1>
+    <h2>Hello p135 <a href="http://"></a></h2>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
