--- a/Practice/index.html
+++ b/Practice/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+
+    <section id="products">
+        <div class="container my-5">
+            <h1 class="head">Salam</h1>
+            <button class="btn btn-success on">On</button>
+            <button class="btn btn-danger off">Off</button>
+        </div>
+    </section>
     <div id="product">
         <span>Salam1</span>
         <span>Salam2</span>
