--- a/Practice/index.html
+++ b/Practice/index.html
@@ -9,15 +9,20 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-
-    <section id="products">
-        <div class="container my-5">
-            <h1 class="head">Salam</h1>
-            <button class="btn btn-success on">On</button>
-            <button class="btn btn-danger off">Off</button>
+    <!-- <a href="http://">Salam</a> -->
+    <section id="products" class="body-active">
+       <div class="box">
+        <div class="icon">
+            <i class="fa-solid fa-lightbulb"></i>
         </div>
+        <div class="container my-5 container-edit">
+            <!-- <h1 class="head">Salam</h1> -->
+            <button class="btn btn-success on">On</button>
+            <!-- <button class="btn btn-danger off">Off</button> -->
+        </div>
+       </div>
     </section>
-    <div id="product">
+    <!-- <div id="product">
         <span>Salam1</span>
         <span>Salam2</span>
         <span>Salam3</span>
@@ -28,7 +33,8 @@
         </div>
     </div>
     <h1 class="header">Hello p414</h1>
-    <h2>Hello p135 <a href="http://"></a></h2>
+    <h2>Hello p135 <a href="http://"></a></h2> -->
+    <script src="https://kit.fontawesome.com/9c6e6ff268.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
