--- a/Practice/index.html
+++ b/Practice/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <!-- <a href="http://">Salam</a> -->
-    <section id="products" class="body-active">
+    <!-- <section id="products" class="body-active">
        <div class="box">
         <div class="icon">
             <i class="fa-solid fa-lightbulb"></i>
         </div>
-        <div class="container my-5 container-edit">
+        <div class="container my-5 container-edit"> -->
             <!-- <h1 class="head">Salam</h1> -->
-            <button class="btn btn-success on">On</button>
+            <!-- <button class="btn btn-success on">On</button> -->
             <!-- <button class="btn btn-danger off">Off</button> -->
-        </div>
+        <!-- </div>
        </div>
-    </section>
+    </section> -->
     <!-- <div id="product">
         <span>Salam1</span>
         <span>Salam2</span>
@@ -34,6 +34,18 @@
     </div>
     <h1 class="header">Hello p414</h1>
     <h2>Hello p135 <a href="http://"></a></h2> -->
+    <section id="products">
+        <div class="container my-5">
+            <input type="text" class="form-control">
+            <button class="btn btn-primary mt-3">Create</button>
+            <div class="list mt-3">
+                <ul class="list-group">
+                    <!-- <li class="list-group-item my-1">Salam</li> -->
+                </ul>
+            </div>
+        </div>
+    </section>
+ 
     <script src="https://kit.fontawesome.com/9c6e6ff268.js" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
